# llmOnEdge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  llmOnEdge.code-workspace  nv-memotron-9b-v2.code-workspace
build-clangd/: compile_commands.json
build-edge-test/: compile_commands.json
docs/: attention_plugin.md  edgeLLM.md  fmha_aot.md  fmha_in_blackwall.md  int4GroupGemm.md  llm_infer.md  pi05-trt-deploy.md  pi05.md  profile.md  trt-edge-llm.md  trt-plugin.md
docs/arch/: ref.md
docs/impl/: tensor_and_memory.md
docs/kernels/: speculative.md
docs/plugins/: int4GroupwiseGemmPlugin.md  vit_attention.md
src/edgeLLM/: CMakeLists.txt
src/edgeLLM/include/llm_on_edge/engine/: engine_runner.h
src/edgeLLM/include/llm_on_edge/memory/: buffer.h  buffer_manager.h  cuda_check.h  element_type.h  memory_stats.h  memory_types.h  tensor.h
src/edgeLLM/src/: buffer.cpp  buffer_manager.cpp  element_type.cpp  engine_runner.cpp  memory_stats.cpp  memory_types.cpp  tensor.cpp
src/edgeLLM/tests/e2e/: memory_e2e.cpp
src/edgeLLM/tests/unit/: test_buffer.cpp  test_buffer_manager.cpp  test_engine_runner.cpp  test_memory_stats.cpp  test_tensor.cpp
src/llm_input_parse/: CMakeLists.txt  llm_input_parse.cpp  llm_input_parse.h
src/openai_server/: CMakeLists.txt  README.md  llm_session.cpp  llm_session.h  main.cpp  openai_mapping.cpp  openai_mapping.h
src/openai_server/tests/: e2e_openai_server_cli.cmake  test_openai_mapping.cpp
